--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,1 +1,31 @@
-<p>form works!</p>
+<h1>
+    Vire um voluntário!
+</h1>
+<h2>Ler, Gravar, Compartilhar: Junte-se a Nós!</h2>
+
+<form [formGroup]="form" >
+    <mat-card class="example-card" appearance="outlined" >
+        <mat-card-content>
+            <mat-form-field class="example-full-width">
+                <mat-label>Nome Completo</mat-label>
+                <input matInput>
+              </mat-form-field>
+
+              <mat-form-field class="example-full-width">
+                <mat-label>Email</mat-label>
+                <input type="email" matInput formControlName="email" [errorStateMatcher]="matcher"
+                       placeholder="Ex. pat@example.com">
+                <mat-hint>Errors appear instantly!</mat-hint>
+                @if (form.get('email')?.hasError('email') && !form.get('email')?.hasError('required')) {
+                  <mat-error>Please enter a valid email address</mat-error>
+                }
+                @if (form.get('email')?.hasError('required')) {
+                  <mat-error>Email is <strong>required</strong></mat-error>
+                }
+              </mat-form-field>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>    
+</form>
